adding some changes in index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <div class="tacos">
                 <div class="logo">
-                    <img src="/images/bottle.png" alt="">
+                    <img src="images/bottle.png" alt="">
                 </div>
                 <div class="heading">
                     Beers
@@ -97,7 +97,7 @@
             </div>
             <div class="tacos">
                 <div class="logo">
-                    <img src="/images/wine-logo.png" alt="">
+                    <img src="images/wine-logo.png" alt="">
                 </div>
                 <div class="heading">
                     Wines
@@ -109,7 +109,7 @@
             </div>
             <div class="tacos">
                 <div class="logo">
-                    <img src="/images/music-logo.png" alt="">
+                    <img src="images/music-logo.png" alt="">
                 </div>
                 <div class="heading">
                     Music
@@ -124,7 +124,7 @@
     <section class="section-3">
 
         <div class="div-1">
-            <img src="/images/french-fries.png" alt="" id="french-fries">
+            <img src="images/french-fries.png" alt="" id="french-fries">
         </div>
         <div class="div-2">
             <div class="featured-taco">
